# cat-lang2

./: .clang-format  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: main.cpp.0C0BD265B04FF0D4.idx
src/backend/: jit.cpp  jit.h
src/common/: common.h  diag.cpp  diag.h  error.h  file.cpp  file.h  span.cpp  span.h
src/frontend/ast/: expr.h  item.h  printer.cpp  printer.h  stmt.h  type.h
src/frontend/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
src/frontend/parser/: parser.cpp  parser.h
src/frontend/sema_checker/: flow_checker.cpp  flow_checker.h  pass_interface.h  pass_manager.h  resolver.cpp  resolver.h  scope.h  sema_checker.cpp  sema_checker.h  sema_ctx.h  symbol.cpp  symbol.h  symbol_table.cpp  symbol_table.h
src/frontend/type_checker/: inferer.cpp  inferer.h  type.cpp  type.h  type_checker.cpp  type_checker.h  type_ctx.cpp  type_ctx.h  unifier.cpp  unifier.h
src/midend/ast_optimizer/: algebraic_simplifier.h  ast_pass.h  block_simplifier.h  boolean_simplifier.h  canonicalization.h  constant_folder.h  dead_brach.h  pass_manager.h  utils.h
src/midend/ir_analyzer/: analysis_ctx.cpp  analysis_ctx.h  dominator.h  reaching_definition.h  very_busy_expression.h
src/midend/ir_analyzer/dataflow/: analysis_ctx.cpp  analysis_ctx.h  dataflow_slover.h  dominator.cpp  dominator.h  live_variable.h  reaching_definition.h  very_busy_expression.h
src/midend/ir_analyzer/pointer/: andersen_data.cpp  andersen_data.h  andersen_solver.cpp  andersen_solver.h
src/midend/ir_emitter/: codegen_ctx.cpp  codegen_ctx.h  env.h  ir_emitter.cpp  ir_emitter.h
src/midend/ir_optimizer/: llvm_optimizer.h  llvm_optmizer.cpp
src/midend/mlir_emitter/: codegen_ctx.h  env.h  mlir_emitter.cpp  mlir_emitter.h
src/runtime/: builtin_registry.cpp  builtin_registry.h
src/runtime/types/: list_builtin.cpp  list_builtin.h
test/: class.cat  class_member_assign.cat  fib.cat  function.cat  global_var.cat  if_else.cat  list.cat  list_loop.cat  loop.cat  method.cat  nested_class.cat  nested_list.cat
tests/: test_andersen.cpp  test_dom.cpp  test_integration.cpp  test_lexer.cpp  test_parser.cpp  test_sema.cpp  test_semtype.cpp  test_type.cpp
